# cca-exam-prep-customer-support

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/: review-cca-compliance.md
.github/workflows/: ci.yml
.planning/: CCA-RULES.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md
.planning/phases/01-project-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-models-services-and-core-loop/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-CONTEXT.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: tutorial.md
notebooks/: 00_setup.ipynb  01_escalation.ipynb  02_compliance.ipynb  03_tool_design.ipynb  04_cost_optimization.ipynb  05_context_management.ipynb  06_handoffs.ipynb  07_integration.ipynb  08_meta_teaching.ipynb  helpers.py
scripts/: gen_nb01.py  gen_nb02.py  gen_nb03.py  tag_notebook_cells.py
src/customer_service/: __init__.py  __main__.py
tests/: conftest.py  test_agent_loop.py  test_anti_patterns.py  test_caching.py  test_callbacks.py  test_config.py  test_context_manager.py  test_coordinator.py  test_data.py  test_handoffs.py  test_helpers.py  test_imports.py  test_models.py  test_notebook_execution.py  test_notebook_fixes.py  test_notebooks.py  test_services.py  test_tools.py
(+83 files in other folders)
